eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/Kmeans.build.log
11:08:54 **** Incremental Build of configuration Debug for project Kmeans ****
make all 
Building file: ../src/main.c
Invoking: Cross GCC Compiler
gcc -I"/home/gdem/eclipse-workspace/Kmeans" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function ‘readParAndImg’:
../src/main.c:8:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int main(void) {
                ^
../src/main.c:11:1: error: expected ‘{’ at end of input
 }
 ^
src/subdir.mk:21: recipe for target 'src/main.o' failed
make: *** [src/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

11:08:54 Build Failed. 4 errors, 0 warnings. (took 200ms)

